# hyperstream-remixer

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  compile_commands.json  vcpkg.json
.github/workflows/: ci.yml
src/HyperstreamRemixer/: main.c++
src/HyperstreamRemixer/Arrays/: boundaries.h++  safe-access.h++
src/HyperstreamRemixer/Audio/: audio-system.h++
src/HyperstreamRemixer/Audio/Buffering/: audio.c++  audio.h++
src/HyperstreamRemixer/Audio/Buffering/Exceptions/: wrong-audio-buffer-cleanup-strategy-exception.c++  wrong-audio-buffer-cleanup-strategy-exception.h++
src/HyperstreamRemixer/Audio/Effects/: audio-effect.h++  reverb.c++  reverb.h++
src/HyperstreamRemixer/Audio/Exceptions/: already-initialized-exception.c++  already-initialized-exception.h++  sdl-init-exception.c++  sdl-init-exception.h++
src/HyperstreamRemixer/Audio/Filters/: low-pass.h++
src/HyperstreamRemixer/Audio/Loading/: audio-loader.c++  audio-loader.h++  file-audio-loader.c++  file-audio-loader.h++
src/HyperstreamRemixer/Audio/Waveform/: amplitude-clipping.h++  waveform-types.h++
src/HyperstreamRemixer/Concepts/: primitive.h++
src/HyperstreamRemixer/Debug/: print.h++  stacktrace.h++  visual-audio-debugger-definitions.h++  visual-audio-debugger.h++  waveform-signals.h++
src/HyperstreamRemixer/Environment/: configuration.h++
src/HyperstreamRemixer/Exceptions/: hyperstream-exception.c++  hyperstream-exception.h++
src/HyperstreamRemixer/Macros/: coerce-inline.h++  expression-stringify.h++
src/HyperstreamRemixer/Maps/: safe-access.h++
src/HyperstreamRemixer/Math/: clipping.h++  factor-clipping.h++  sgn.h++
src/HyperstreamRemixer/Memory/: allocation.h++  unit.h++
src/HyperstreamRemixer/Memory/Exceptions/: allocation-clone-copy-exception.c++  allocation-clone-copy-exception.h++  unknown-memory-cleanup-strategy-exception.c++  unknown-memory-cleanup-strategy-exception.h++
src/HyperstreamRemixer/Multithreading/: optional-lock.c++  optional-lock.h++
src/HyperstreamRemixer/Performance/: stopwatch.h++
src/HyperstreamRemixer/Random/: random-factor.h++
src/HyperstreamRemixer/Runtime/: interrupt.h++
src/HyperstreamRemixer/Sound/Adapters/: freeverb-adapters.h++
src/HyperstreamRemixer/Sound/Buffering/: audio.c++  audio.h++
src/HyperstreamRemixer/Sound/Buffering/Exceptions/: audio-file-not-found-exception.c++  audio-file-not-found-exception.h++  unknown-audio-fx-behavior-exception.c++  unknown-audio-fx-behavior-exception.h++
src/HyperstreamRemixer/Sound/Effects/: audio-effect.c++  audio-effect.h++  crackle.c++  crackle.h++  eq.c++  eq.h++  lowpass.c++  lowpass.h++  noise.c++  noise.h++  remainder.h++  reverb.c++  reverb.h++  speed.c++  speed.h++
src/HyperstreamRemixer/Sound/Effects/Exceptions/: eq-ascii-format-exception.c++  eq-ascii-format-exception.h++
src/HyperstreamRemixer/Sound/Exceptions/: already-initialized-exception.c++  already-initialized-exception.h++  not-initialized-exception.c++  not-initialized-exception.h++  sdl-init-exception.c++  sdl-init-exception.h++
src/HyperstreamRemixer/Sound/Filters/: comb.h++  low-pass.h++
src/HyperstreamRemixer/Sound/Mp3/: audio-system.h++
src/HyperstreamRemixer/Sound/Waveform/: amplitude-clipping.h++  hz-clipping.h++  resampling.h++  sample-rate.h++  waveform-types.h++
src/HyperstreamRemixer/Studio/: studio.c++  studio.h++
src/HyperstreamRemixer/Sugar/: conditions.h++  percents.h++
